// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HouseInfo renders when houseBalance is 0 1`] = `
<div
  className="HouseInfo-component"
>
  <div>
    House Balance
    <br />
    Loading...
  </div>
  <br />
  <div>
    Jackpot Balance
    <br />
    Loading...
  </div>
  <br />
  <div>
    All-Time Total Spins
    <br />
    Loading...
  </div>
</div>
`;

exports[`HouseInfo renders when houseBalance is 123456.9876 1`] = `
<div
  className="HouseInfo-component"
>
  <div>
    House Balance
    <br />
    ⛓ 123,456.99
  </div>
  <br />
  <div>
    Jackpot Balance
    <br />
    Loading...
  </div>
  <br />
  <div>
    All-Time Total Spins
    <br />
    Loading...
  </div>
</div>
`;

exports[`HouseInfo renders when houseBalance is undefined 1`] = `
<div
  className="HouseInfo-component"
>
  <div>
    House Balance
    <br />
    Loading...
  </div>
  <br />
  <div>
    Jackpot Balance
    <br />
    Loading...
  </div>
  <br />
  <div>
    All-Time Total Spins
    <br />
    Loading...
  </div>
</div>
`;
